<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chapter06</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="c06_b1">文件保存</string>
    <string name="c06_b2">SharedPreferences保存</string>
    <string name="c06_b3">记住密码</string>
    <string name="c06_b4">SQLite数据库</string>
    <string name="b1_file_edit">在这里输入内容</string>
    <string name="b2_save_data">保存数据</string>
    <string name="b2_restore_data">读取数据</string>
    <string name="login_account_text">帐号：</string>
    <string name="login_account">请输入帐号</string>
    <string name="login_password_text">密码：</string>
    <string name="login_password">请输入密码</string>
    <string name="b3_login">登录</string>
    <string name="b3_remember">记住密码</string>
    <string name="force_offline">发送强制脱机广播</string>
    <string name="b4_create">创建数据库</string>
    <string name="b4_insert">添加</string>
    <string name="b4_update">更新</string>
    <string name="b4_select">查询</string>
    <string name="b4_delete">删除</string>
    <string name="b4_transaction">使用事务</string>

</resources>
