<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/b4_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4_create"/>
    
    <Button 
        android:id="@+id/b4_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4_insert"/>
    
    <Button 
        android:id="@+id/b4_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4_update"/>
    
    <Button 
        android:id="@+id/b4_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4_select"/>
    
    <Button 
        android:id="@+id/b4_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4_delete"/>
    
    <Button 
        android:id="@+id/b4_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4_transaction"/>

</LinearLayout>
