<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account_text" />

        <EditText
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_account" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password_text" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <CheckBox 
            android:id="@+id/b3_remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_height="wrap_content"
            android:hint="@string/b3_remember" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/b3_login"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/b3_login" />
    </TableRow>

</TableLayout>